--- a/index.html
+++ b/index.html
@@ -303,9 +303,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
           - Introduce Project 3: Query<br>
-          - Archive Critique
+          - <a href="https://docs.google.com/document/d/1P3-7uxsimv2HFHzW9zMLUTj66FER5p2t9JmqrRIZcT8/edit" target="_blank">Archive Critique</a><br>
           <!-- - <a href="" target="_blank">JS 2: Operators, Functions</a> -->
           <br><br>
           <span class="nextclass">
@@ -321,12 +320,15 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - Introduce Project 3: Query<br>
-          - Archive Critique
+          - Interview Review<br>
+          - Questions
+          <br><br>
+          ✳ break ✳
+          <br><br>
+          - CSS 4: Media Query
           <br><br>
           <span class="nextclass">
             Next Class:<br>
-            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
             - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
             <br><br>
             Project:<br>
@@ -340,11 +342,11 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
           - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
+            - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
             Project:<br>
             - Walk and Transcription
           </span>
@@ -355,8 +357,8 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          - <a href="" target="_blank">JS 3: Arrays, Loops</a><br>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
+          <!-- - <a href="" target="_blank">JS 3: Arrays, Loops</a><br> -->
           <br><br>
           ✳ break ✳
           <br><br>
@@ -375,6 +377,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
+          - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
           - Work Session<br>
           - WIP Critique
           <br><br>
@@ -525,18 +528,18 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <button class="accordion"><li>Query</li></button>
         <div class="panel">
           <p>
-            Explore how the web connects us to each other and how we interact with those connections. This final project circles back around to the first. You will retrace your walk from Project 1: Path but this time joined with another person outside of this class. Prepare a set of 5 Questions that will help guide the conversation although you do not have to strictly ahdere to it. Make sure this conversation is recorded for your ease of transcription and reference later.
+            Explore how the web connects us to each other and how we interact with those connections. This final project puts you in conversation with someone from outside of this class. Prepare a set of at least 5 Questions that will help guide the conversation although you do not have to strictly ahdere to it. This conversation could be had in person, over the phone, over e-mail, etc. Make sure this conversation is recorded for your ease of transcription and reference later.
             <br><br>
-            Create a website that hosts the transcription of your conversation akin to an interview. The formatting and style of your website must significantly shift between two states using Media Query. (Desktop/Mobile, Digital/Print, Portrait/Landscape, etc.) Unlike Project 1, the goal of Project 3: Query is not to translate your walk but rather the conversation you shared.
-            See references on the <a href="" target="_blank">Query Are.na channel</a>.
+            Create a website that hosts the contents of your conversation akin to an interview. The formatting and style of your website must significantly shift between two states using Media Query. (Desktop/Mobile, Digital/Print, Portrait/Landscape, etc.)
+            See references on the <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/query-nvifg2rgzxk" target="_blank">Query Are.na channel</a>.
             <br><br>
             REQUIREMENTS:<br>
             ① Conversation<br>
             - Your guest must be someone outside of this class.<br>
-            - Must prepare a list of 5 Questions.<br>
+            - Must prepare a list of at least 5 Questions.<br>
             - Must prepare a recording of your conversation.<br>
             - Must prepare a transcription of your conversation.<br>
-            - Keep the conversation under half an hour.
+            - Keep the conversation around half an hour (if in person or over the camera) or at least 1000 words (if done via text/email).
             <br><br>
             ② Website<br>
             - Must contain the transcription of your conversation.<br>
@@ -545,14 +548,13 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - Be intentional about what kind of reading experience you're presenting.
             <br><br>
             FINAL CRITIQUE:<br>
-            For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The two people after your name on the list will navigate the two states of your website. If you chose print as one of your states, come prepared with it fully printed.
+            For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>.
             <br><br>
             CONSIDERATIONS:<br>
-            Conversation/Walk<br>
+            Conversation<br>
             - Consider having one or two questions that help introduce an audience to who your guest is.<br>
             - Could your conversation include topics we've covered in class?<br>
-            - Although this project is not focused on your Path, consider what is different about your walk this second time. What has changed in the environment? Is it a different time of day or weather? How have you changed?<br>
-            - Is there any additional ephemera that could be collected on your walk together such as photos, video, sounds, etc.<br><br>
+            - Is there any additional ephemera that could be collected during your chat together such as photos, video, sounds, etc.<br><br>
             Website<br>
             - Do your two states compliment or contrast with each other?<br>
             - Is there a difference in the content between your two states?<br>
@@ -560,15 +562,12 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - Consider how your site is representing two distinct voices. Be cognizant of the readability of your text in terms of size, leading, tracking, contrast, etc.<br>
             - Consider what you may leave in or out of your transcription.
             <br><br>
-            TRANSCRIPTION:<br>
-            To aid in the transcription of your conversation, enter your recording into <a href="" target="_blank">XX</a> to produce an unedited version.
-            <br><br>
             SCHEDULE:<br>
-            - Class 11, Apr 13: Introduce Project<br>
-            - Class 12, Apr 20: Interview Review and 5 Questions<br>
-            - Class 13, Apr 27: Walk and Transcription<br>
-            - Class 14, May 4: WIP Critiques<br>
-            - Class 15 (Final), May 11: Project Critique
+            - Class 9, Mar 30: Introduce Project<br>
+            - Class 10, Apr 6: Interview Review and 5 Questions<br>
+            - Class 11, Apr 13: Review Conversation<br>
+            - Class 12, Apr 20: WIP Critiques<br>
+            - Class 13, Apr 27: Project Critique
           </p>
         </div>
 
@@ -644,10 +643,10 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <button class="accordion"><li>Interview Review</li></button>
         <div class="panel">
           <p>
-            To help you prepare for Project 3: Query, you will review and analyze an existing interview.
+            To help you prepare for Project 3: Query, you will review and analyze an existing interview of your choice.
             <br><br>
             1. Choose an interview and document it with screenshots or scans.<br>
-            2. Upload your images to this <a href="" target="_blank">document</a>.<br>
+            2. Upload your images to this <a href="https://docs.google.com/presentation/d/1Fzxx1Jz2aXfakPnvuNwjKzjRvPEfCMS5VlwWJny0EEo/edit?usp=sharing" target="_blank">document</a>.<br>
             3. Fill out the remaining slides which detail the content and design of your interview.
           </p>
         </div>
