--- a/index.html
+++ b/index.html
@@ -304,14 +304,13 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - Introduce Project 3: Query<br>
-          - <a href="https://docs.google.com/document/d/1P3-7uxsimv2HFHzW9zMLUTj66FER5p2t9JmqrRIZcT8/edit" target="_blank">Archive Critique</a><br>
+          - <a href="https://docs.google.com/document/d/1P3-7uxsimv2HFHzW9zMLUTj66FER5p2t9JmqrRIZcT8/edit" target="_blank">Archive Critique</a>
           <!-- - <a href="" target="_blank">JS 2: Operators, Functions</a> -->
           <br><br>
           <span class="nextclass">
             Next Class:<br>
             Project:<br>
-            - Interview Review<br>
-            - Questions
+            - <a href="https://docs.google.com/presentation/d/1Fzxx1Jz2aXfakPnvuNwjKzjRvPEfCMS5VlwWJny0EEo/edit#slide=id.g120cbadf122_0_4" target="_blank">Interview Review + Questions</a><br>
           </span>
         </p>
       </div>
