--- a/index.html
+++ b/index.html
@@ -324,15 +324,14 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           ✳ break ✳
           <br><br>
-          - CSS 4: Media Query
+          - <a href="https://www.notion.so/type-and-interaction-too/CSS-4-Media-Query-260f784156364b0ca4d992fd9dd5557b" target="_blank">CSS 4: Media Query</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
             - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
             <br><br>
             Project:<br>
-            - Interview Review<br>
-            - Questions
+            - Do your interview
           </span>
         </p>
       </div>
@@ -943,7 +942,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Tue Mar 22, 2022
+    Last Updated: Tue MApr 5, 2022
   </footer>
 
 
