--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
           <br><br>
           ✳ break ✳
           <br><br>
-          - <a href="https://www.notion.so/type-and-interaction-too/CSS-4-Media-Query-260f784156364b0ca4d992fd9dd5557b" target="_blank">CSS 4: Media Query</a>
+          - <a href="https://type-and-interaction-too.notion.site/CSS-4-Media-Query-260f784156364b0ca4d992fd9dd5557b" target="_blank">CSS 4: Media Query</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -942,7 +942,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
 
     Special thank you to Evan Chang, Simone Cutrí, Luiza Dale, Brendan Griffiths, Rosa McElheny, Aidan Quinlan, Steven Rodriguez, Mindy Seu, Mianwei Wang, and many others who helped shape this class and continue to weave a generous web for all.
     <br><br>
-    Last Updated: Tue MApr 5, 2022
+    Last Updated: Tue Apr 5, 2022
   </footer>
 
 
