--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             - Guest Visit: <a href="https://eric.young.li/" target="_blank">Eric Li</a> and <a href="https://nazli-ercan.com/" target="_blank">Nazlı Ercan</a>
             <br><br>
             Project:<br>
-            - Do your interview
+            - Do your interview and transcription
           </span>
         </p>
       </div>
@@ -346,7 +346,7 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
             Next Class:<br>
             - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
             Project:<br>
-            - Walk and Transcription
+            - Sketches
           </span>
         </p>
       </div>
@@ -356,11 +356,13 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
+          - <a href="" target="_blank">JS 1: Console, Variables, Events</a>
           <!-- - <a href="" target="_blank">JS 3: Arrays, Loops</a><br> -->
           <br><br>
           ✳ break ✳
           <br><br>
-          - Working Session
+          - Working Session<br>
+          – WIP Critiques
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -376,8 +378,13 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
         <p>
           In Class:<br>
           - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          - Work Session<br>
-          - WIP Critique
+          - <a href="" target="_blank">JS 2: Operators, Functions</a>
+          <!-- - <a href="" target="_blank">JS 3: Arrays, Loops</a><br> -->
+          <br><br>
+          ✳ break ✳
+          <br><br>
+          - Working Session<br>
+          – WIP Critiques
           <br><br>
           <span class="nextclass">
             Next Class:<br>
@@ -406,7 +413,6 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - Exercise: Update<br>
           - Finish Page
         </p>
       </div>
