--- a/index.html
+++ b/index.html
@@ -355,12 +355,12 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
-          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
-          - <a href="" target="_blank">JS 1: Console, Variables, Events</a>
+          <!-- - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br> -->
+          <!-- - <a href="" target="_blank">JS 1: Console, Variables, Events</a> -->
           <!-- - <a href="" target="_blank">JS 3: Arrays, Loops</a><br> -->
-          <br><br>
+          <!-- <br><br>
           ✳ break ✳
-          <br><br>
+          <br><br> -->
           - Working Session<br>
           – WIP Critiques
           <br><br>
@@ -377,19 +377,17 @@ jgs \\|//   \\|///  \\\|//\\\|/// \|///  \\\|//  \\|//  \\\|//
       <div class="panel">
         <p>
           In Class:<br>
+          - <a href="https://www.are.na/pmcd-5002-section-b-spring-2022/web-share" target="_blank">Web Share: So Young, Giordana, Krishangi</a><br>
           - <a href="https://docs.google.com/document/d/1adxnPSIr56yG0y0pchh-Cay99rUApITgazFabLclYH4/edit?usp=sharing" target="_blank">Reading Discussion</a><br>
-          - <a href="" target="_blank">JS 2: Operators, Functions</a>
+          <!-- - <a href="" target="_blank">JS 2: Operators, Functions</a> -->
           <!-- - <a href="" target="_blank">JS 3: Arrays, Loops</a><br> -->
-          <br><br>
-          ✳ break ✳
-          <br><br>
           - Working Session<br>
-          – WIP Critiques
+          – <a href="https://docs.google.com/document/d/1Bs5PhuHDyHe2819-51t6_-Cn3jSxNdrfRumDm4WODgk/edit?usp=sharing" taget="_blank">WIP Critiques</a>
           <br><br>
           <span class="nextclass">
             Next Class:<br>
             - Query Critique<br>
-            <em>For the final critique of this project, you will post your link on this <a href="" target="_blank">document</a>. The two people after your name on the list will navigate the two states of your website. If you chose print as one of your states, come prepared with it fully printed.</em>
+            <em>Come prepared to show both states on your own devices. If you chose print as one of your states, come prepared with it fully printed.</em>
           </span>
         </p>
       </div>
